@@ -1,7 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version='1.0' encoding='utf-8'?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -35,7 +33,7 @@
     <exclusions>
         <exclusion>
             <groupId>org.openjfx</groupId>
-            <artifactId>javafx</artifactId> <!-- Adds this to kill the duplicate profile warnings -->
+            <artifactId>javafx</artifactId> 
         </exclusion>
         <exclusion>
             <groupId>org.openjfx</groupId>
@@ -52,7 +50,7 @@
     </exclusions>
         </dependency>
 
-    </dependencies>
+    <dependency><groupId>org.eclipse.jdt</groupId><artifactId>org.eclipse.jdt.core</artifactId><version>3.39.0</version></dependency><dependency><groupId>org.fxmisc.richtext</groupId><artifactId>richtextfx</artifactId><version>0.11.2</version></dependency></dependencies>
 
     <build>
 
@@ -77,7 +75,7 @@
 
                 <configuration>
                     <mainClass>com.projectwizard.Main</mainClass>
-                </configuration>
+                <options><option>--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option><option>-Xmx3g</option><option>-XX:+UseG1GC</option></options></configuration>
 
             </plugin>
 
